# OpenGL_Shaders

./: .gitignore  3dSceneGLFW.cpp  CMakeLists.txt  README.md  build.sh  conanfile.txt  main.cpp  menu.cpp
glsl/: clouds.glsl  fragment600x600.glsl  fragmentMarch750x550.glsl  fragmentPod750x550.glsl  mainMarch.glsl  noise2D.glsl  noise3D.glsl  noiseCloud.glsl  vertex.glsl
ico/: ico.rc
include/imgui/: imgui.h
src/backends/: imgui_impl_glfw.h  imgui_impl_opengl3.cpp
src/config/: config_manager.cpp  config_manager.h  slider_config.h
src/core/: application.cpp  application.h  main.cpp
src/glsl/: fragment.glsl  fragment600x600.glsl  fragmentPod750x550.glsl  noise2D.glsl  noise3D.glsl  noiseCloud.glsl  vertex.glsl
src/glsl/reference/: clouds.glsl
src/rendering/: renderer.cpp  renderer.h  shader_manager.cpp  shader_manager.h
src/settings/: settings_manager.cpp  settings_manager.h  settings_state.cpp  settings_state.h
src/state/: app_state.cpp  app_state.h
src/ui/: ui_manager.cpp  ui_manager.h
src/utils/: error_utils.cpp  error_utils.h  file_utils.cpp  file_utils.h
src/window/: input_manager.cpp  input_manager.h  window_manager.cpp  window_manager.h
